[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/buttons.gd" type="Script" id=1]
[ext_resource path="res://textures/background/menuBackground.png" type="Texture" id=2]
[ext_resource path="res://textures/buttons/opcions_button.png" type="Texture" id=3]
[ext_resource path="res://scripts/menuScene.gd" type="Script" id=4]
[ext_resource path="res://textures/buttons/play_button.png" type="Texture" id=5]
[ext_resource path="res://textures/buttons/exit_button.png" type="Texture" id=6]
[ext_resource path="res://textures/background/soundPanicTitile.png" type="Texture" id=7]
[ext_resource path="res://sounds/music/mainMenuMusic.mp3" type="AudioStream" id=8]

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="menuBackground" type="Sprite" parent="."]
position = Vector2( 1.25267, 1.58305 )
scale = Vector2( 0.948148, 0.857884 )
texture = ExtResource( 2 )
offset = Vector2( 538.766, 348.707 )

[node name="gameTitle" type="Sprite" parent="menuBackground"]
position = Vector2( 232.353, 137.173 )
scale = Vector2( 2.79635, 2.37416 )
texture = ExtResource( 7 )

[node name="buttons" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="buttons"]
margin_left = 149.586
margin_top = 240.986
margin_right = 256.586
margin_bottom = 287.986
text = "PotalButton"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playButton" type="Button" parent="buttons"]
margin_left = 150.0
margin_top = 310.771
margin_right = 250.0
margin_bottom = 360.771
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionsButton" type="Button" parent="buttons"]
margin_left = 136.507
margin_top = 380.771
margin_right = 266.507
margin_bottom = 420.771
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitButton" type="Button" parent="buttons"]
margin_left = 155.0
margin_top = 450.453
margin_right = 245.0
margin_bottom = 495.453
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="pressed" from="buttons/button" to="buttons" method="_on_button_pressed"]
[connection signal="pressed" from="buttons/playButton" to="buttons" method="_on_playButton_pressed"]
[connection signal="pressed" from="buttons/optionsButton" to="buttons" method="_on_optionsButton_pressed"]
[connection signal="pressed" from="buttons/exitButton" to="buttons" method="_on_exitButton_pressed"]
